--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
-spring.application.name=Patient-management
-spring.datasource.url=jdbc:mysql://localhost:3306/healthcare
-spring.datasource.username=sanjana
-spring.datasource.password=sanju
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-spring.thymeleaf.cache=false
-spring.security.user.name=admin
-spring.security.user.password=admin
-
-# H2 Console Configuration (if needed)
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
